--- a/templates/line.html
+++ b/templates/line.html
@@ -43,7 +43,7 @@ data.addColumn('number', '{{ chart_report['Site'] }}');
 data.addRows([
 {% for chart_use in table %}
   ['{{ chart_use['Time'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
-  {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-6'] }},
+  {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 2'] }}, {{ chart_use['HC-6'] }},
   {{ chart_use['L13'] }}, {{ chart_use['L14'] }}, {{ chart_use['L15 Station 1'] }}, {{ chart_use['L15 Station 2'] }},
   {{ chart_use['ROBOT'] }} ],
 {% endfor %}
@@ -53,7 +53,7 @@ data.addRows([
 data.addRows([
 {% for chart_use in table %}
   ['{{ chart_use['Date'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
-  {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-6'] }},
+  {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 2'] }}, {{ chart_use['HC-6'] }},
   {{ chart_use['L13'] }}, {{ chart_use['L14'] }}, {{ chart_use['L15 Station 1'] }}, {{ chart_use['L15 Station 2'] }},
   {{ chart_use['ROBOT'] }} ],
 {% endfor %}
@@ -63,7 +63,7 @@ data.addRows([
 data.addRows([
 {% for chart_use in table %}
   ['{{ chart_use['Time'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
-  {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-6'] }},
+  {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 2'] }}, {{ chart_use['HC-6'] }},
   {{ chart_use['L13'] }}, {{ chart_use['L14'] }}, {{ chart_use['L15 Station 1'] }}, {{ chart_use['L15 Station 2'] }},
   {{ chart_use['ROBOT'] }} ],
 {% endfor %}
@@ -73,6 +73,10 @@ data.addRows([
 var options = {
   chart: {
   },
+  legend: 'none',
+  series: {
+    7: { color: '#3b5998' }
+  }
 };
 
 var chart = new google.charts.Line(document.getElementById('linechart_material'));
@@ -192,7 +196,7 @@ $(window).resize(function(){
               </thead>
               <tbody>
                 {% for report in report %}
-                <tr>
+                <tr >
                   <td>
                     <p class="text-muted mb-0">{{ report['Date'] }}</p>
                   </td>
@@ -205,12 +209,11 @@ $(window).resize(function(){
                   <td>
                     <p class="text-muted mb-0">{{ report['Site'] }}</p>
                   </td>
-                  <td class="bg-success" name="{{ report['Site'] }}">
-                    <p name="{{ report['Site'] }}" class="mb-0 Status{{ report['Site'] }}">Pass</p>
+                  <td class="" name="{{ report['Site'] }}">
+                    <p name="{{ report['Site'] }}" class="mb-0">{{ report['State'] }}</p>
                   </td>
                   <td>
-                    <p class="text-muted mb-0">{{ report['Water'] }}</p>
-                    <input type="hidden" name="data{{ report['Site'] }}"  value="{{ report['Water'] }}">
+                    <p class="text-muted mb-0" >{{ report['Water'] }}</p>
                   </td>
                   <td>
                     <p class="text-muted mb-0">{{ report['Temp'] }}</p>
@@ -227,22 +230,23 @@ $(window).resize(function(){
 {% endblock %}
 {% block script %}
 <script src="{{ url_for('static', filename='js/data-table-line.js') }}"></script>
-<script>
+<!--<script>
   {% for reportscript in report %}
-  console.log($( 'input[name="data{{ reportscript['Site'] }}"]' ).val())
-  if ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() >= 12){
-    $('p[name="{{ reportscript['Site'] }}"]').text("Pass");
-  } else if ((10 <= $( 'input[name="data{{ reportscript['Site'] }}"]' ).val()) && ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() < 12)) {
+  console.log("{{ reportscript['State'] }}")
+  if ("{{ reportscript['State'] }}" === "Pass"){
+    $('td[name="{{ reportscript['Site'] }}"]').addClass("bg-success");
+    $('p[name="{{ reportscript['Site'] }}"]').text("pass");
+  } else if ("{{ reportscript['State'] }}" === "Monitor") {
     $('p[name="{{ reportscript['Site'] }}"]').text("Monitor");
     $('td[name="{{ reportscript['Site'] }}"]').removeClass("bg-success");
     $('td[name="{{ reportscript['Site'] }}"]').addClass("bg-warning");
-  } else if ($('input[name="data{{ reportscript['Site'] }}"]' ).val() < 10) {
+  } else if ("{{ reportscript['State'] }}" === "Error") {
     $('p[name="{{ reportscript['Site'] }}"]').text("Error");
     $('td[name="{{ reportscript['Site'] }}"]').removeClass("bg-success");
     $('td[name="{{ reportscript['Site'] }}"]').addClass("bg-danger");
   }
   {% endfor %}
-</script>
+</script>-->
 <script>
   $('#year').on('change', function () {
     $('#search').prop('disabled', !$(this).val());
