--- a/templates/add.html
+++ b/templates/add.html
@@ -165,7 +165,7 @@
               <td>
                 <!--<input type="text" class="form-control" name="Station_{{ edit_delete['Station'] }}" id="Station_{{ edit_delete['Station'] }}"
                   value={{ edit_delete['Station'] }}>-->
-                  <p>{{ edit_delete['Station'] }}</p>
+                  <p>{{ edit_delete['OP'] }}</p>
               </td>
               <td>
                 <!--<input type="text" class="form-control" name="Phase_{{ edit_delete['Phase'] }}" id="Phase_{{ edit_delete['Phase'] }}"
