--- a/templates/trend-di-chart.html
+++ b/templates/trend-di-chart.html
@@ -37,7 +37,7 @@
         <div class="card mt-3">
           <div class="card-header bg-dark bg-gradient text-white d-flex justify-content-between">Phase5</div>
           <div class="card-body">
-            <div id="linechartP5" class="display dataP5" style="height: 18rem;"></div>
+            <div id="linechartP5" class="display dataP5" style="height: 18rem;"><h1 id="dataP5" class="text-center"></h1></div>
           </div>
         </div>
         <div class="card mt-3">
