--- a/templates/line.html
+++ b/templates/line.html
@@ -38,6 +38,9 @@ data.addColumn('string', 'Time');
 {% for chart_report in column %}
 data.addColumn('number', '{{ chart_report['Site'] }}');
 {% endfor %}
+data.addColumn('number', 'Low');
+data.addColumn('number', 'Monitor');
+
 
 {% if now == "True" %}
 data.addRows([
@@ -45,7 +48,7 @@ data.addRows([
   ['{{ chart_use['Time'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
   {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 2'] }}, {{ chart_use['HC-6'] }},
   {{ chart_use['L13'] }}, {{ chart_use['L14'] }}, {{ chart_use['L15 Station 1'] }}, {{ chart_use['L15 Station 2'] }},
-  {{ chart_use['ROBOT'] }} ],
+  {{ chart_use['ROBOT'] }},12 ,13 ],
 {% endfor %}
 ]);
 {% endif %}
@@ -55,7 +58,7 @@ data.addRows([
   ['{{ chart_use['Date'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
   {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 2'] }}, {{ chart_use['HC-6'] }},
   {{ chart_use['L13'] }}, {{ chart_use['L14'] }}, {{ chart_use['L15 Station 1'] }}, {{ chart_use['L15 Station 2'] }},
-  {{ chart_use['ROBOT'] }} ],
+  {{ chart_use['ROBOT'] }},12 ,13 ],
 {% endfor %}
 ]);
 {% endif %}
@@ -65,7 +68,7 @@ data.addRows([
   ['{{ chart_use['Time'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
   {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 2'] }}, {{ chart_use['HC-6'] }},
   {{ chart_use['L13'] }}, {{ chart_use['L14'] }}, {{ chart_use['L15 Station 1'] }}, {{ chart_use['L15 Station 2'] }},
-  {{ chart_use['ROBOT'] }} ],
+  {{ chart_use['ROBOT'] }},12 ,13 ],
 {% endfor %}
 ]);
 {% endif %}
@@ -73,10 +76,11 @@ data.addRows([
 var options = {
   chart: {
   },
-  legend: 'none',
+  curveType: 'function',
   series: {
-    7: { color: '#3b5998' }
-  }
+    14: { color: '#FE0000' },
+    15: { color: '#fee000' },
+  },
 };
 
 var chart = new google.charts.Line(document.getElementById('linechart_material'));
@@ -194,33 +198,6 @@ $(window).resize(function(){
                   <th>Temp</th>
                 </tr>
               </thead>
-              <tbody>
-                {% for report in report %}
-                <tr >
-                  <td>
-                    <p class="text-muted mb-0">{{ report['Date'] }}</p>
-                  </td>
-                  <td>
-                    <p class="text-muted mb-0">{{ report['Time'] }}</p>
-                  </td>
-                  <td>
-                    <p class="text-muted mb-0">{{ report['Phase'] }}</p>
-                  </td>
-                  <td>
-                    <p class="text-muted mb-0">{{ report['Site'] }}</p>
-                  </td>
-                  <td class="" name="{{ report['Site'] }}">
-                    <p name="{{ report['Site'] }}" class="mb-0">{{ report['State'] }}</p>
-                  </td>
-                  <td>
-                    <p class="text-muted mb-0" >{{ report['Water'] }}</p>
-                  </td>
-                  <td>
-                    <p class="text-muted mb-0">{{ report['Temp'] }}</p>
-                  </td>
-                </tr>
-                {% endfor %}
-              </tbody>
             </table>
         </div>
       </div>
@@ -229,28 +206,76 @@ $(window).resize(function(){
 
 {% endblock %}
 {% block script %}
-<script src="{{ url_for('static', filename='js/data-table-line.js') }}"></script>
-<!--<script>
-  {% for reportscript in report %}
-  console.log("{{ reportscript['State'] }}")
-  if ("{{ reportscript['State'] }}" === "Pass"){
-    $('td[name="{{ reportscript['Site'] }}"]').addClass("bg-success");
-    $('p[name="{{ reportscript['Site'] }}"]').text("pass");
-  } else if ("{{ reportscript['State'] }}" === "Monitor") {
-    $('p[name="{{ reportscript['Site'] }}"]').text("Monitor");
-    $('td[name="{{ reportscript['Site'] }}"]').removeClass("bg-success");
-    $('td[name="{{ reportscript['Site'] }}"]').addClass("bg-warning");
-  } else if ("{{ reportscript['State'] }}" === "Error") {
-    $('p[name="{{ reportscript['Site'] }}"]').text("Error");
-    $('td[name="{{ reportscript['Site'] }}"]').removeClass("bg-success");
-    $('td[name="{{ reportscript['Site'] }}"]').addClass("bg-danger");
-  }
-  {% endfor %}
-</script>-->
+<!--<script src="{{ url_for('static', filename='js/data-table-line.js') }}"></script>-->
 <script>
   $('#year').on('change', function () {
     $('#search').prop('disabled', !$(this).val());
   }).trigger('change');
+</script>
+<script>
+  $(document).ready(function () {
+    var data_table = $("#line").DataTable({
+      processing: true,
+      serverSide: true,
+      serverMethod: "post",
+      ajax: {
+        url: "/data_line",
+      },
+      lengthMenu: [
+        [10, 20, 30, 40, 50, 100], 
+        [10, 20, 30, 40, 50, 100]
+      ],
+      searching: true,
+      sort: false,
+      serverSide: true,
+      createdRow: function (row, data, index) {
+        if (data.Status === "Normal") {
+          $("td", row).eq(4).removeClass("text-danger");
+          $("td", row).eq(4).removeClass("text-warning");
+          $("td", row).eq(4).addClass("text-success");
+        } else if (data.Status === "Monitor"){
+          $("td", row).eq(4).removeClass("text-success");
+          $("td", row).eq(4).removeClass("text-danger");
+          $("td", row).eq(4).addClass("text-warning");
+        } else if (data.Status === "Low"){
+          $("td", row).eq(4).removeClass("text-success");
+          $("td", row).eq(4).removeClass("text-warning");
+          $("td", row).eq(4).addClass("text-danger");
+        }
+      },
+      columns: [
+        { data: "Date" },
+        { data: "Time" },
+        { data: "Phase" },
+        { data: "Site" },
+        { data: "Status" },
+        { data: "DIWater" },
+        { data: "Temp"},
+      ],
+      dom: 'Blfrtip',
+      buttons: [
+        {
+          extend: 'excel',
+          text: '<i class="fa fa-file-excel me-2"></i><span>generate excel</span>',
+          className: 'mb-3 btn btn-success me-1',
+          
+        },
+        {
+            extend: 'pdf',
+            text: '<i class="fa fa-file-pdf me-2"></i><span>generate PDF</span>',
+            className: 'mb-3 btn btn-danger me-1',
+        }
+      ],
+      columnDefs: [
+        {
+          targets: 0,
+          render: function (data, type, row, meta) {
+            return moment.utc(data).local().format("YYYY-MM-DD");
+          },
+        },
+      ]
+    });
+  });
 </script>
 
 {% endblock %}
