--- a/templates/alert.html
+++ b/templates/alert.html
@@ -1,119 +1,220 @@
-{% extends 'layout.html' %}
-{% block title %}Alert{% endblock %}
-{% block head %}
-<!-- DataTable script -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/datetime/1.1.2/js/dataTables.dateTime.min.js"></script>
-<!-- DataTable css -->
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/datetime/1.1.2/css/dataTables.dateTime.min.css" />
-<!-- Include Date Range Picker -->
-<script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
-<!-- script pagination -->
-<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/plug-ins/1.12.1/dataRender/datetime.js"></script>
-{% endblock %}
-{% block content %}
-<div class="card mt-3">
-  <div class="card-header  bg-danger bg-gradient text-white">
-    <div class="row justify-content-lg-end">
-      <div class="col-lg-5">
-        <h5>Alert status</h5>
+{% extends 'layout.html' %} {% block title %}Alert{% endblock %} {% block head
+  %}
+  <link
+        type="text/css"
+        rel="stylesheet"
+        href="{{ url_for('static', filename='css/colors.css') }}"
+      />
+  <!-- DataTable script -->
+  <script
+    type="text/javascript"
+    src="https://code.jquery.com/jquery-3.5.1.js"
+  ></script>
+  <script src="{{ url_for('static', filename='js/jquery-ui.js') }}"></script>
+  <script
+    type="text/javascript"
+    src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"
+  ></script>
+  <!-- DataTable css -->
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"
+  />
+  <!-- jquery css datepicker -->
+  <link
+        type="text/css"
+        rel="stylesheet"
+        href="{{ url_for('static', filename='css/jquery-ui.css') }}"
+      />
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <!-- script pagination -->
+  <script
+    type="text/javascript"
+    src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"
+  ></script>
+  
+  <script
+    type="text/javascript"
+    src="https://cdn.datatables.net/plug-ins/1.12.1/dataRender/datetime.js"
+  ></script>
+  
+  
+  {% endblock %} {% block content %}
+  <div class="card mt-3">
+    <div class="card-header bg-danger bg-gradient text-white ">
+      <div class="row justify-content-lg-end">
+        <div class="col-lg-3">
+          <h4>Alert status</h4>
+        </div>
+        <div class="col-lg-9 d-flex justify-content-lg-end">
+          <!-- date range filter -->
+          <!-- <table cellspacing="5" cellpadding="5">
+            <tbody>
+              <tr >
+                <td><h5 class="text-white mb-0">Choose Date :</h5></td>
+                <td><input type="text" class="form-control" id="start_date"></td>
+                <td><h5 class="text-white mb-0">To</h5></td>
+                <td><input type="text" class="form-control" id="end_date"></td>
+                <td>
+                  <button type="button" class="btn btn-success"id="submit" name="submit"> Submit </button>
+                </td>
+              </tr>
+            </tbody>
+          </table> -->
+        <!-- End date range filter -->
+        </div>
       </div>
-      <div class="col-lg-7 d-flex justify-content-lg-end ">
-        <!-- date range filter -->
-        <!-- <table cellspacing="5" cellpadding="5">
-          <tbody>
-            <tr >
-              <td><h5>Choose Date :</h5></td>
-              <td><input type="text" class="form-control" id="min" name="min"></td>
-              <td><h5>To</h5></td>
-              <td><input type="text" class="form-control" id="max" name="max"></td>
-            </tr>
-          </tbody>
-        </table> -->
-      <!-- End date range filter -->
     </div>
-    </div>
-  </div>
     <div class="card-body">
-      <table class="display table align-middle mb-0 bg-white" id="alert">
+      
+      <br><br>
+      <table class="display dataTable " id="alert_ss">
         <thead class="bg-light">
           <tr>
             <th>Station</th>
             <th>Phase</th>
-            <th>Machine</th>
+            <th>Site</th>
             <th>Detail</th>
             <th>Date</th>
             <th>Time</th>
           </tr>
         </thead>
       </table>
-      
     </div>
-</div>
-{% endblock %}
-{% block script %}
-<script>
-  $(document).ready(function () {
-    var Alert_table = $("#alert").DataTable({
-      processing: true,
-      serverSide: true,
-      serverMethod: "post",
-      ajax: {
-        url: "/data_alert",
-      },
-      lengthMenu: [
-        [10, 20, 30, 40, 50, 100],
-        [10, 20, 30, 40, 50, 100],
-      ],
-      searching: true,
-      sort: false,
-      serverSide: true,
-      createdRow: function (row, data, index) {
-        if (data.Detail === "Monitor") {
-          $("td", row).eq(3).addClass("text-yello");
-        } else {
-          $("td", row).eq(3).addClass("text-warning");
-        }
-      },
-      columns: [
-        { data: "Station" },
-        { data: "Phase" },
-        { data: "Site" },
-        { data: "Detail" },   
-        { data: "Date" },
-        { data: "Time" },
-      ],
-      columnDefs: [
-        {
-          targets: 4,
-          render: function (data, type, row, meta) {
-            return moment.utc(data).local().format("YYYY-MM-DD");
+  </div>
+  {% endblock %} {% block script %}
+  
+  
+  <script>
+  
+   $(document).ready(function() {
+  
+    var st_date = '';
+    var end_date = '';
+  
+      $("#start_date").datepicker({
+        onSelect: function(dateText) {
+            //console.log("Selected date: " + dateText + "; input's current value: " + this.value);
+            $(this).change();
+        },
+        dateFormat: 'yy-mm-dd',
+      })
+      .on("change", function() {
+        st_date = this.value;
+          console.log(this.value);
+      });
+  
+      $("#end_date").datepicker({
+        onSelect: function(dateText) {
+            //console.log("Selected date: " + dateText + "; input's current value: " + this.value);
+            $(this).change();
+        },
+        dateFormat: 'yy-mm-dd',
+      })
+      .on("change", function() {
+        end_date = this.value;
+          console.log(this.value);
+      });
+       // DataTables initialisation
+       var Alert_table = $("#alert_ss").DataTable({
+        processing: true,
+        serverSide: true,
+        serverMethod: "post",
+        ajax: {
+          //type : 'POST',
+          url: "/data_alert",
+          data: function(d){
+            d.startdate = st_date,
+            d.enddate = end_date
+          }
+          //contentType: 'application/json;charset=UTF-8',
+          //data : {'data':"clicked"}
+        },
+        
+        lengthMenu: [
+          [10, 20, 30, 40, 50, {{totalRecords}}],
+          [10, 20, 30, 40, 50, "All"],
+        ],
+        createdRow: function (row, data, index) {
+          if (data.Detail === "Error") {
+            $("td", row).eq(3).removeClass("text-warning");
+            $("td", row).eq(3).removeClass("text-yellow");
+            $("td", row).eq(3).addClass("text-danger");
+          } else if (data.Detail === "Monitor") {
+            $("td", row).eq(3).removeClass("text-danger");
+            $("td", row).eq(3).removeClass("text-warning");
+            $("td", row).eq(3).addClass("text-yellow");
+          } else if (data.Detail === "Low") {
+            $("td", row).eq(3).removeClass("text-danger");
+            $("td", row).eq(3).removeClass("text-yellow");
+            $("td", row).eq(3).addClass("text-warning");
+          }
+        },
+        columns: [
+          { data: "Station" },
+          { data: "Phase" },
+          { data: "Site" },
+          { data: "Detail" },
+          { data: "Date" },
+          { data: "Time" },
+        ],
+        columnDefs: [
+          {
+            targets: 4,
+            render: function (data, type, row, meta) {
+              return moment.utc(data).local().format("YYYY-MM-DD");
+              
+            },
           },
-        },
-      ],
-      dom: 'Blfrtip',
-      buttons: [
-        {
-          extend: 'excel',
-          text: '<i class="fa fa-file-excel me-2"></i><span>generate excel</span>',
-          className: 'mb-3 btn btn-success me-1',
-        },
-        {
-            extend: 'pdf',
-            text: '<i class="fa fa-file-pdf me-2"></i><span>generate PDF</span>',
-            className: 'mb-3 btn btn-danger me-1',
-        }
-      ],
-    });
-  });
-</script>
-{% endblock %}
+        ],
+        dom: 'Blfrtip',
+        buttons: [
+          {
+            extend: 'excel',
+            text: '<i class="fa fa-file-excel me-2"></i><span>generate excel</span>',
+            className: 'mb-3 btn btn-success me-1',
+            exportOptions: {
+              modifier: {
+                  page: 'all'
+              }
+            }
+          },
+          {
+              extend: 'pdf',
+              text: '<i class="fa fa-file-pdf me-2"></i><span>generate PDF</span>',
+              className: 'mb-3 btn btn-danger me-1',
+          }
+        ],
+      });
+  
+      $("#submit").on("click", function () {
+        Alert_table.ajax.reload();
+      });
+    
+   });
+    
+  </script>
+  
+  {% endblock %}
+  
