--- a/templates/add.html
+++ b/templates/add.html
@@ -14,7 +14,6 @@
 {% endblock %}
 {% block content %}
 
-<div id="container" style="background-color:white"></div>
 <!-- Tab content -->
 <!-- container -->
 <div class="card mt-3">
@@ -24,15 +23,15 @@
             <div class="row mb-4">
               <div class="form-group col-md-4">
                 <label for="OPadd">OP</label>
-                <input type="text" class="form-control" id="OPadd" name="OPadd">
+                <input type="text" class="form-control" id="OPadd" name="OPadd" placeholder="OP2">
               </div>
               <div class="form-group col-md-4">
                 <label for="Phaseadd">Phase</label>
-                <input type="text" class="form-control" id="Phaseadd" name="Phaseadd">
+                <input type="text" class="form-control" id="Phaseadd" name="Phaseadd" placeholder="Phase 4">
               </div>
               <div class="form-group col-md-4">
                 <label for="Siteadd">Site</label>
-                <input type="text" class="form-control" id="Siteadd" name="Siteadd">
+                <input type="text" class="form-control" id="Siteadd" name="Siteadd" placeholder="Fisa 4">
               </div>
             </div>
             <input type="hidden" value="phase" name="add">
@@ -203,7 +202,6 @@
             {% endfor %}
           </tbody>
         </table>
-        
       </form>
     </div>
 </div>
@@ -307,6 +305,7 @@
     Slot_temp.append($('<option/>'))
 
     var Slot_Machine = slot[MachineID.val()];
+    console.log(slot)
 
     for (var i = 1; i < 15; i++) {
       Water.append($('<option/>', {'value': i, 'text': i}));
@@ -315,7 +314,6 @@
 
     for (var key in Slot_Machine) {
       $('select').find('option[value="' + Slot_Machine[key] +'"]').prop('disabled', true);
-      console.log(key)
     }
 
   });
@@ -369,7 +367,6 @@
   $( ".Edit" ).click(function() {
     window.open("edit?edit=" + $(this).val(), "_blank", 
     "toolbar=yes,scrollbars=yes,resizable=yes,top=500,left=300,width=800,height=500");
-    console.log($(this).val())
   })
-  </script>
+</script>
 {% endblock %}
