--- a/templates/loginform.html
+++ b/templates/loginform.html
@@ -74,9 +74,11 @@
                     <label for="DP">Department</label>
                       <select id="DP" name="DP" class="form-control DP">
                         <option value="" selected>Choose Department</option>
-                        <option value="0">IT</option>
-                        <option value="1">Automation</option>
-                        <option value="2">MOC</option>
+                        <option value="1">Information Technology</option>
+                        <option value="2">ผลิตเลนส์ 4</option>
+                        <option value="3">Maintenance</option>
+                        <option value="4">OP2 Coating</option>
+                        <option value="5">Management of Change</option>
                       </select>
                   </div>
                   <div class="form-group col-sm-6">
@@ -91,7 +93,7 @@
                     <label class="form-label mb-0" for="Email">E-mail</label>
                     <input type="text" id="Email" name="Email" class="form-control " />
                   </div>
-                  <div class="form-group col-sm-12">
+                  <div class="form-group col-sm-12" style="display:none">
                     <label>Upload Signature</label>
                     <input type="file" class="form-control" id="file" name="file" />
                   </div>
