--- a/templates/trend-di-chart.html
+++ b/templates/trend-di-chart.html
@@ -20,28 +20,27 @@
 {% endblock %}
 {% block content %}
 <div class="card">
-  <div class="card-header  bg-dark bg-gradient text-white">
-    <div class="row">
+  <div class="card-header bg-dark bg-gradient text-white">
       <div class="col-lg-5">
-        <h5>Trend Deionized water</h5>
+        <h4 class="mb-0">Realtime Chart Monitor</h4>
       </div>
-    </div>
   </div>
     <div class="card-body">
         <div class="card">
-            <div class="card-header bg-dark bg-gradient text-white d-flex justify-content-between">Phase4</div>
+            <h5 class="card-header bg-dark bg-gradient text-white">Phase4</h5>
             <div class="card-body">
               <div id="linechartP4" class="display dataP4" style="height: 18rem;"></div>
             </div>
         </div>
         <div class="card mt-3">
-          <div class="card-header bg-dark bg-gradient text-white d-flex justify-content-between">Phase5</div>
+          <h5 class="card-header bg-dark bg-gradient text-white d-flex justify-content-between">Phase5</h5>
           <div class="card-body">
             <div id="linechartP5" class="display dataP5" style="height: 18rem;"><h1 id="dataP5" class="text-center"></h1></div>
+            
           </div>
         </div>
         <div class="card mt-3">
-          <div class="card-header bg-dark bg-gradient text-white d-flex justify-content-between">Phase9</div>
+          <h5 class="card-header bg-dark bg-gradient text-white d-flex justify-content-between">Phase9</h5>
           <div class="card-body">
             <div id="linechartP9" class="display dataP9" style="height: 18rem;"></div>
           </div>
