--- a/static/css/notification.css
+++ b/static/css/notification.css
@@ -1,60 +1,10 @@
-/* .dropdown {
-    display:inline-block;
-    margin-left:20px;
-    padding:10px;
-  }
-
-
-.glyphicon-bell {
-   
-    font-size:1.5rem;
-  }
-
-.notifications {
-   min-width:420px; 
-  }
-  
-  .notifications-wrapper {
-     overflow:auto;
-      max-height:250px;
-    }
-    
- .menu-title {
-     color:#ff7788;
-     font-size:1.5rem;
-      display:inline-block;
-      }
- 
-.glyphicon-circle-arrow-right {
-      margin-left:10px;     
-   }
-  
-   
- .notification-heading, .notification-footer  {
- 	padding:2px 10px;
-       }
-      
-        
-.dropdown-menu.divider {
-  margin:5px 0;          
-  }
-
-.item-title {
-  
- font-size:1.3rem;
- color:#000;
-    
+.dropdown-menu {
+  overflow-y: auto; 
+  max-height: 385px;
 }
-
-.notifications a.content {
- text-decoration:none;
- background:#ccc;
-
- }
-    
-.notification-item {
- padding:10px;
- margin:5px;
- background:#ccc;
- border-radius:4px;
- } */
+ .link
+{
+   color:rgb(0, 0, 0);
+   text-decoration: none; 
+   background-color: none;
+}
