--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -47,13 +46,14 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/sidebar.css') }}"
     />
+    
 
     <script src="{{ url_for('static', filename='js/alert.js') }}"></script>
     
     <!--Toast-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
+    <!--<script>
     document.addEventListener("DOMContentLoaded", function(){
         var toastElementList = [].slice.call(document.querySelectorAll(".toast"));
       var toastList = toastElementList.map(function(element){
@@ -62,7 +62,7 @@
             });
       });
     });
-    </script>
+    </script>-->
     {% block head %} {% endblock %}
     <script src="{{ url_for('static', filename='js/alert.js') }}"></script>
 
@@ -104,16 +104,7 @@
              aria-current="true"
              >
              <i class="fas fa-tachometer-alt fa-fw me-3"></i>
-             <span>Status  Machine code</span>
-          </a>
-          <a
-             href="line"
-             class="list-group-item list-group-item-action py-2 ripple 
-             border-0 border-bottom bg-dark bg-gradient text-white "
-             aria-current="true"
-             >
-             <i class="fas fa-chart-line fa-fw me-3"></i>
-             <span>Sumary Deionzed water</span>
+             <span>Status Machine code</span>
           </a>
           <a
              href="/trendDi-chart"
@@ -121,8 +112,17 @@
              border-0 border-bottom bg-dark bg-gradient text-white "
              aria-current="true"
              >
-             <i class="fa fa-area-chart fa-fw me-3"></i>
+             <i class="fas fa-chart-line fa-fw me-3"></i>
              <span>Chart Monitor By Phase</span>
+          </a>
+          <a
+             href="line"
+             class="list-group-item list-group-item-action py-2 ripple 
+             border-0 border-bottom bg-dark bg-gradient text-white "
+             aria-current="true"
+             >
+             <i class="fa fa-area-chart fa-fw me-3"></i>
+             <span>Summary Deionized    water</span>
           </a>
           <a
              href="/trendDi"
@@ -142,18 +142,18 @@
             <i class="fa-solid fa-bell fa-fw me-3"></i>
             <span>Alert Status</span>
           </a>
-          
           {% if current_user.is_authenticated %}
           <a
              href="setup"
              class="list-group-item list-group-item-action py-2 ripple 
              border-0 border-bottom bg-dark bg-gradient text-white "
              aria-current="true"
+             id="setup"
              >
              <i class="bi bi-gear fa-fw me-3"></i>
             <span>Setup</span>
           </a>
-          <a
+          <!-- <a
              href="/status-carbon-resin"
              class="list-group-item list-group-item-action py-2 ripple 
              border-0 border-bottom bg-dark bg-gradient text-white "
@@ -161,31 +161,44 @@
              >
              <i class="fas fa-toggle-on fa-fw me-3"></i>
             <span>Status Open Carbon and Resin</span>
-          </a>
+          </a> -->
           <a
              href="addmachine"
              class="list-group-item list-group-item-action py-2 ripple 
              border-0 border-bottom bg-dark bg-gradient text-white "
              aria-current="true"
+             id="Manage"
              >
             <i class="bi bi-node-plus-fill fa-fw me-3"></i>
             <span>Manage Machine</span>
           </a>
-          
           <a
-             href="logout"
+             href="document"
              class="list-group-item list-group-item-action py-2 ripple 
-             border-0 border-bottom bg-dark bg-gradient text-white mt-5"
+             border-0 border-bottom bg-dark bg-gradient text-white "
              aria-current="true"
              >
-            <i class="bi-solid bi-door-open-fill fa-fw me-3"></i>
-            <span>Logout</span>
+            <i class="fa fa-file-text fa-fw me-3"></i>
+            <span>Document</span>
           </a>
-          {% else %}
-          <button type="button" class="list-group-item list-group-item-action py-2 ripple 
-          border-0 border-bottom bg-dark bg-gradient text-white mt-5"  data-mdb-toggle="modal" data-mdb-target="#exampleModal">
-          <i class="bi-solid bi-door-open-fill fa-fw me-3"></i><span>Login</span>
-          </button>
+          <a
+             href="/request-timeline"
+             class="list-group-item list-group-item-action py-2 ripple 
+             border-0 border-bottom bg-dark bg-gradient text-white "
+             aria-current="true"
+             >
+            <i class="fa-solid fa-timeline fa-fw me-3"></i>
+            <span>Timeline</span>
+          </a>
+          <a
+             href="/view-process"
+             class="list-group-item list-group-item-action py-2 ripple 
+             border-0 border-bottom bg-dark bg-gradient text-white "
+             aria-current="true"
+             >
+            <i class="fa-solid fa-screwdriver-wrench fa-fw me-3"></i>
+            <span>View Process</span>
+          </a>
           {% endif %}
 
         </div>
@@ -200,69 +213,97 @@
     <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
       <!-- Container wrapper -->
       <div class="container-fluid pl-20">
-        
-        <!-- Toggle button -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-mdb-toggle="collapse"
-          data-mdb-target="#sidebarMenu"
-          aria-controls="sidebarMenu"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="fas fa-bars"></i>
-        </button>
-  
-        <!-- Brand -->
-        <a class="navbar-brand " href="/">
-          <img
-            src="https://www.thaiopticalgroup.com/TOGEU.png"
-            height="50"
-            alt="TOG Logo"
-            loading="lazy"
-          />
-        </a>
+          <div class="col-6">
+            <!-- Toggle button -->
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-mdb-toggle="collapse"
+              data-mdb-target="#sidebarMenu"
+              aria-controls="sidebarMenu"
+              aria-expanded="false"
+              aria-label="Toggle navigation">
+              <i class="fas fa-bars"></i>
+            </button>
 
-        <!-- Notifications -->
-        <div class="dropdown">
-          {% if current_user.is_authenticated %}
-            Welcome {{ current_user.id }}!
-          {% endif %}
-          &nbsp&nbsp&nbsp
-          <button
-            class="btn btn-dark bg-gradient"
-            type="button"
-            id="dropdownMenuButton"
-            data-mdb-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <i class="fas fa-bell fa-lg"></i>
-            <span id="countli" class="badge rounded-pill badge-notification bg-danger">0</span>
-          </button>
-          <ul class="dropdown-menu dropdown-menu-end" id="ul_o" aria-labelledby="dropdownMenuButton">
-            {% for error in error %}
-            <!--data From Database-->
-            <li><a class="dropdown-item " href="alert">{{ error['Detail'] }} ที่ {{ error['Site'] }}</a></li>
-            {% endfor %}
+            <!-- Brand -->
+            <a class="navbar-brand " href="/">
+              <img
+                src="https://www.thaiopticalgroup.com/TOGEU.png"
+                height="50"
+                alt="TOG Logo"
+                loading="lazy"
+              />
+            </a>
+
+          </div>
+          <div class="col-6 d-flex flex-row-reverse">
+            <!-- login and logout -->
             {% if current_user.is_authenticated %}
-            {% for user_recept in user_recept %}
-            <li><a class="dropdown-item " >Confirm User <b>{{ user_recept['Name'] }}</b>
-              <form action="{{ url_for('confirm_reject') }}">
-                <button type="submit" class="btn btn-success" name="confirm" value="{{ user_recept['Name'] }}">
-                  <i class="fa-solid fa-check"></i>
-                </button>
-                <button type="submit" class="btn btn-danger" name="reject" value="{{ user_recept['Name'] }}">
-                  <i class="fa-solid fa-xmark"></i>
-                </button>
-              </form>
-            </a></li>
-            {% endfor %}
+            <button
+              onclick="window.location.href='logout';"
+              class="btn btn-dark bg-gradient "
+              aria-current="true"
+              >
+              <i class="bi-solid bi-door-open-fill fa-fw me-3"></i>
+              <span>Logout</span>
+            </button>
+            {% else %}
+            <button 
+              type="button" 
+              class="btn btn-dark bg-gradient "  
+              data-mdb-toggle="modal" 
+              data-mdb-target="#exampleModal">
+              <i class="bi-solid bi-door-open-fill fa-fw me-3"></i>
+              <span>Login</span>
+            </button>
             {% endif %}
-          </ul>
-        </div>
+
+            <!-- Notifications -->
+            <div class="dropdown">
+              {% if current_user.is_authenticated %}
+                Welcome {{ current_user.id }}!
+              {% endif %}
+              &nbsp&nbsp&nbsp
+              
+              <button
+                class="btn btn-dark bg-gradient me-3"
+                aria-current="true"
+                id="dropdownMenuButton"
+                data-mdb-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <i class="fas fa-bell fa-lg pt-2 pb-2 "></i>
+                <span id="countli" class="badge rounded-pill badge-notification bg-danger">0</span>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-end overflow-auto" id="ul_o" aria-labelledby="dropdownMenuButton">
+                {% for error in error %}
+                <!--data From Database-->
+                <li><a class="dropdown-item " href="alert">{{ error['Detail'] }} ที่ {{ error['Site'] }}</a></li>
+                {% endfor %}
+                {% if current_user.is_authenticated %}
+                {% for user_recept in user_recept %}
+                <li><a class="dropdown-item " >Confirm User <b>{{ user_recept['Name'] }}</b>
+                  <form action="{{ url_for('confirm_reject') }}">
+                    <button type="submit" class="btn btn-success" name="confirm" value="{{ user_recept['Name'] }}">
+                      <i class="fa-solid fa-check"></i>
+                    </button>
+                    <button type="submit" class="btn btn-danger" name="reject" value="{{ user_recept['Name'] }}">
+                      <i class="fa-solid fa-xmark"></i>
+                    </button>
+                  </form>
+                </a></li>
+                {% endfor %}
+                {% endif %}
+              </ul>
+              
+            </div>
+            <!--End Notifications -->
+          </div>
+     
         
-        <!--End Notifications -->
+        
+        
         
       <!-- Container wrapper -->
     </nav>
@@ -275,17 +316,18 @@
   <main style="margin-top: 58px; ">
     <div class="container pt-4 ">{% block content %} {% endblock %}</div>
     <!-- Toasts -->
-
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-      <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header bg-danger bg-gradient text-white ">
-          <i class='fas fa-exclamation-triangle'></i>&nbsp
-          <strong class="me-auto">Alert</strong>
-          <small id="timealert"></small>
-          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body bg-danger text-white ">
-          <div id="AlertId"></div>
+    <div class="toast-container">
+      <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="30000">
+          <div class="toast-header bg-danger bg-gradient text-white ">
+            <i class='fas fa-exclamation-triangle'></i>&nbsp
+            <strong class="me-auto">Alert</strong>
+            <small id="timealert"></small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body bg-danger text-white ">
+            <div id="AlertId"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -306,6 +348,18 @@
           e.preventDefault();
       });
     });
+
+    if ("{{passive}}" === "True") {
+      $("#setup").show();
+    } else if ("{{passive}}" === "False") {
+      $("#setup").hide();
+    }
+
+    if ("{{MM}}" === "True") {
+      $("#Manage").show();
+    } else if ("{{MM}}" === "False") {
+      $("#Manage").hide();
+    }
   </script>
   <!-- notification -->
   <script>
@@ -313,6 +367,10 @@
     $( "#dropdownMenuButton" ).click(function() {
       document.getElementById("countli").style.display = "none";
     });
+    if ($("#ul_o").children().length === 0) {
+      $("#countli").removeClass("bg-danger")
+      $("#countli").addClass("bg-success") 
+    }
   </script>
   <script>
     $(document).ready(function(){
